# swarm

./: .all-contributorsrc  .git-blame-ignore-revs  .gitignore  .hlint.yaml  .mergify.yml  .restyled.yaml  .stan.toml  CHANGELOG.md  CHANGELOG.txt  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  DESIGN.md  LICENSE  NOTICE  README.md  ROADMAP.md  SCENARIOS.md  TUTORIAL.md  cabal.haskell-ci  cabal.project  cspell.json  def.sw  default.nix  env.txt  example.sw  feedback.yaml  flake.nix  fourmolu.yaml  hie.stack.yaml  hie.yaml  hie.yaml.cabal  hie.yaml.stack  package-lock.json  pull_request_template.md  report.html  robot-exploration.cabal  sandbox.hs  scenarios  stack.yaml  (+6 more)
.github/: deadpendency.yaml  mergify.yml  pull_request_template.md  restyled.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: cabal.haskell-ci  check_todos.yml  dummy-ci.yml  haskell-ci-mac.yml  haskell-ci-simple.yml  haskell-ci-windows.yml  haskell-ci.yml  haskell-release.yml  hlint.yml  normalize-cabal.yml  restyled.yml  scenario-schema.yml  vscode-ci.yml  vscode-publish.yml  yaml-normalization.yml
app/: Main.hs
app/Swarm/: App.hs
app/doc/: Main.hs
app/game/: Main.hs
app/scene/: Main.hs
app/tournament/: Main.hs
bench/: Benchmark.hs
boolexpr/: boolexpr.cabal
boolexpr/Data/: BoolExpr.hs
boolexpr/Data/BoolExpr/: Parser.hs  Printer.hs  Simplify.hs
code/app/: Main.hs
contribs/: swarm-mode.el
data/: about.txt  adjectives.txt  entities.yaml  logo.txt  names.txt  recipes.yaml  terrains.yaml
data/challenges/: move.yaml  move2.yaml  sample.yaml  w0.yaml
data/help/: index.md
data/lib/: arith.sw  array.sw  control.sw  function.sw  list.sw  tuple.sw
data/scenarios/: 00-ORDER.txt  00-classic.yaml  01-creative.yaml  README.md  README_NEW.md  blank.yaml  classic.yaml  creative.yaml  move.yaml  schema.json  w0.yaml
data/schema/: attribute.json  combustion.json  cosmic-loc.json  cosmicloc.json  direction.json  directions.json  display.json  entities.json  entity-count.json  entity.json  explicit-waypoint.json  inventory.json  named-structure.json  objective.json  orientation-map.json  placement.json  planar-loc.json  planarloc.json  portal-exit.json  portal.json  prerequisite.json  range.json  recipe.json  recipes.json  robot.json  scenario.json  structure-orient.json  structure.json  terrain.json  terrains.json  world.json
data/worlds/: README.md  classic.world
docs/: EDITORS.md  module-cap-types.xopp  recipes.dot  timing-diagram.txt
docs/blog/: .BlogLiterately-uploaded-images  2021-09-call-for-collaboration.md  2021-10-swarm-progress.md  2022-06-swarm-progress.md  2022-10-13-alpha-release.md  2022-swarm-swarm.md  2023-08-swarm-0.4-release.md
docs/ott/: swarm.ott
editors/: README.md  package-lock.json
editors/emacs/: swarm-mode.el
editors/vim/: swarm.lua  swarm.vim
editors/vscode/: .gitignore  .vscodeignore  CHANGELOG.md  DEVELOPING.md  LICENSE  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json  vsc-extension-quickstart.md
example/: BFS-clear.sw  a-initial.sw  a-lambda.sw  cat.sw  chess-solution.sw  dfs.sw  dictionary.sw  fact.sw  list.sw  maybe.sw  moves.sh  moves.sw  multi-key-handler.sw  omega.sw  pilotmode.sw  rectypes.sw  recursive-containers.sw  rep.sw  square.sw  wander.sw  zigzag.sw
example/long_import/: README.md  a_000.sw  a_001.sw  a_002.sw  a_003.sw  a_004.sw  a_005.sw  a_006.sw  a_007.sw  a_008.sw  a_009.sw  a_010.sw  a_011.sw  a_012.sw  a_013.sw  a_014.sw  a_015.sw  a_016.sw  a_017.sw  a_018.sw  a_019.sw  a_020.sw  a_021.sw  a_022.sw  a_023.sw  a_024.sw  a_025.sw  a_026.sw  a_027.sw  a_028.sw  a_029.sw  a_030.sw  a_031.sw  a_032.sw  a_033.sw  a_034.sw  a_035.sw  a_036.sw  a_037.sw  a_038.sw  (+12 more)
explore/caps/: CHANGELOG.md  Caps.hs  LICENSE  SolverTests.hs  SubsetSolver.hs  cap-check.cabal  stack.yaml
explore/unify/: CHANGELOG.md  LICENSE  unify.cabal
explore/unify/src/: Unify.hs
gen-scenario/: package.yaml
gen-scenario/app/: Main.hs
images/logo/: MkLogo.hs  title.txt
nix/: sources.json
other_langs/: README_RU.md  TUTORIAL_RU.md
scripts/: autoplay-tutorials.sh  autopopulate-spellchecker.sh  benchmark-against-ancestor.sh  benchmark-against-parent.sh  build-game.sh  compare-format.sh  enforce-todo-issues.sh  merge-yaml.sh  normalize-all-scenarios.sh  normalize-all-yaml.sh  normalize-cabal.sh  play.sh  playtest.sh  preview-world-vscode.sh  reformat-code.sh  regenerate-schema-docs.sh  remote-repl.sh  render-sublibrary-dependencies.sh  run-scenarios.sh  run-tests.sh  validate-json-schemas.sh  view-haddocks.sh
scripts/local/: readme.txt
scripts/normalize/: all.sh  cabal.sh  code-format.sh  compare-format.sh  yaml.sh
scripts/spellcheck/: autopopulate-spellchecker.sh  split-module-names.hs
scripts/test/: benchmark-against-ancestor.sh  benchmark-against-parent.sh  run-benchmarks.sh  run-tests.sh
scripts/validate/: issues-for-todos.sh  json-schemas.sh  weeder.sh
src/Data/: BoolExpr.hs  LICENSE
src/Swarm/: AST.hs  App.hs  Constant.hs  DocGen.hs  Effect.hs  Elaborate.hs  Failure.hs  Game.hs  Log.hs  Parse.hs  Pipeline.hs  Pretty.hs  ReadableIORef.hs  TUI.hs  Typecheck.hs  Types.hs  UI.hs  Util.hs  Version.hs  Web.hs
src/swarm-exe/: Main.hs
test/: Integration.hs  Unit.hs
test/bench/: Benchmark.hs  ImportChain.hs
test/integration/: .#TestScenarioSolutions.hs  Main.hs  TestEditorFiles.hs  TestFormat.hs  TestLoadingErrors.hs  TestRecipeCoverage.hs  TestScenarioParse.hs  TestScenarioSolutions.hs
test/tournament-host/: Main.hs
test/unit/: Main.hs  TestBoolExpr.hs  TestCommand.hs  TestContext.hs  TestEval.hs  TestInventory.hs  TestLSP.hs  TestLanguagePipeline.hs  TestModel.hs  TestNotification.hs  TestOrdering.hs  TestOverlay.hs  TestParse.hs  TestParser.hs  TestPedagogy.hs  TestPretty.hs  TestQQ.hs  TestRecipeCoverage.hs  TestRepl.hs  TestRequirements.hs  TestScoring.hs  TestUtil.hs  TestViewChunk.hs
tournament/: README.md
tournament/schema/: schema-local.sql  swarm-sqlite-schema.sql
web/: command-matrix.html  index.html  play.html
(+1586 files in other folders)
